@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)
 
 Bug fixes:
+..F....... [ZBX-4900] improved performance of 'Status of Zabbix' dashboard widget (Vedmak)
 ...G...... [ZBX-4905] fixed processing of system.swap.in/out[,pages] under Linux 2.6 (Sasha)
 ...G...... [ZBX-4907] fixed processing of system.swap.in/out[,sectors/count] under Linux (Sasha)
 ..F....... [ZBX-4902] fixed errors in configuration export (Vedmak)
@@ -606,6 +607,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.13rc1
 
+..F....... [ZBX-4900] improved performance of 'Status of Zabbix' dashboard widget (Vedmak)
 ...G...... [ZBX-4905] fixed processing of system.swap.in/out[,pages] under Linux 2.6 (Sasha)
 ...G...... [ZBX-4907] fixed processing of system.swap.in/out[,sectors/count] under Linux (Sasha)
 ........S. [ZBX-4884] fixed incorrect calculation of items using option "Delta (speed per second)" after recovery from unsupported state (Sasha)
